@@ -15,6 +15,8 @@ $Id$
 	  correctly
 	* fix for BUG#161: remove redundant lock in
 	  _nss_ldap_innetgr()
+	* fix for BUG#166: chase all nested netgroups in
+	  innetgr()
 	* fix deadlock if getXXXent() called without first
 	  calling setXXXent()
 	* only request gidNumber attribute when initgroups()
